@@ -1,3 +1,6 @@
+ + Include LWP traffic dump in the debug output
+ + Added sample script to restore original DNS settings after connect
+
 *** 0.6.1
  # Fixed script support - in 0.6.0 code was not committed by mistake
  + Added ability to change default url
